--- a/style.css
+++ b/style.css
@@ -2,27 +2,27 @@ html{
   margin:0;
   padding:0;
   box-sizing:border-box;
-  
+  font-size:100%;
 }
 /*REUSEABLE COMPONENTS*/
 
 .font-12 {
-  font-size: 12px;
+  font-size:.75em;
 }
 
 .font-14 {
-  font-size: 14px;
+  font-size:0.875em;
 }
 
 .font-16 {
-  font-size: 16px;
+  font-size:1em;
 }
 .font-18{
-   font-size:18px;
+   font-size:1.125em;
   font-family:'Lobster', cursive;
 }
 .font-20 {
-  font-size: 20px;
+  font-size:1.25em;
   font-family:'Lobster', cursive;
 }
 /*Header */
@@ -66,6 +66,49 @@ header{background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(Assets/1.
   left:0;
 }
 
+.intro-animated{
+  background:#000000;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  display:flex;
+  justify-content: center;
+  align-items:center;
+  }
+  
+.slider{
+  background:rgb(191,213,218);
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  transform:translateY(100%);
+ 
+  
+}
+
+
+.intro-text{
+  color:rgba(157,231,244,0.855);
+  font-family: 'Raleway', sans-serif;
+  font-size:3rem;
+  font-weight:bold;
+  
+ }
+
+.hide{
+  background:black;
+  overflow:hidden;
+}
+
+.hide span{
+  transform:translateY(100%);
+  display:inline-block;
+  
+}
 
 .nm{
   
@@ -73,18 +116,4 @@ header{background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(Assets/1.
  text-decoration-style:wavy;
  color:#2f5a65;
 
-}
-
-@media only screen and (min-width:980px){
-   .container .intro{
-     font-size:45px;
-   }
- .container .intro .m{
-    display:inline-block;
-  }
-  .txt{
-    top:53%;
-    font-size:35px;
-  
-  }
 }
