--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html{
   padding:0;
   box-sizing:border-box;
   font-size:100%;
-}
+ }
 /*REUSEABLE COMPONENTS*/
 
 .font-12 {
@@ -24,6 +24,19 @@ html{
 .font-20 {
   font-size:1.25em;
   font-family:'Lobster', cursive;
+}
+.font-lobster{
+  font-family:'Lobster', cursive;
+}
+.font-rale{
+  font-family: 'Raleway', sans-serif;
+
+}
+.font-popin{
+  font-family: 'Poppins', sans-serif;
+}
+.font-peddana{
+   font-family: 'Peddana', serif;
 }
 /*Header */
 
@@ -76,6 +89,7 @@ header{background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(Assets/1.
   display:flex;
   justify-content: center;
   align-items:center;
+  z-index:9999;
   }
   
 .slider{
@@ -86,7 +100,7 @@ header{background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(Assets/1.
   width:100%;
   height:100%;
   transform:translateY(100%);
- 
+  z-index:9999;
   
 }
 
@@ -111,9 +125,82 @@ header{background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(Assets/1.
 }
 
 .nm{
-  
-  
  text-decoration-style:wavy;
  color:#2f5a65;
+}
+/*Skill */
+.bg-skill{
+  background:linear-gradient(rgba(89,218,250,0.779),rgba(97,216,246,0.752)),url(Assets/skill.jpg);
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+   
+}
 
+
+
+.skill-name{
+  font-size:18px;
+  font-weight:700;
+  text-transform: uppercase;
+  margin:20px 0;
+}
+i{
+  margin-left:2px;
+}
+.skill-bar{
+  height:8px;
+  background: rgba(232,231,232,0.968);
+  border-radius: 8px;
+}
+
+.skill-per{
+  height:8px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  width: 0;
+  transition: 1s linear;
+  position: relative;
+}
+
+.skill-per::before{
+  content: attr(per);
+  position: absolute;
+  padding: 4px 6px;
+  background-color: #000;
+  color: #fff;
+  font-size: 12px;
+  border-radius: 4px;
+  top: -35px;
+  right: 0;
+  transform: translateX(50%);
+}
+
+.skill-per::after{
+  content: '';
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: #000;
+  top: -16px;
+  right: 0;
+  transform: translateX(50%) rotate(45deg);
+  border-radius: 2px;
+}
+
+/*service section*/
+.service-item{
+	text-align:center;
+	padding:50px 0px;
+	background:#fff;
+	margin-bottom:5px;
+	border-radius:5px;
+	box-shadow:0 0 30px rgba(64, 64, 64, 0.1);
+}
+.section-icon{
+  color:#af94ea;
+  font-size:30px;
+ 
+  
 }
