--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ html{
 .font-peddana{
    font-family: 'Peddana', serif;
 }
+/*Header */
+header{
+ 
+  
+}
 
 /*Nav*/
 .logo{
@@ -56,9 +61,9 @@ html{
   position:absolute;
   top:28%;
   left:40%;
-  background:linear-gradient(rgba(164,59,211,0.739)),linear-gradient(#f463ec);
+  background:linear-gradient(180deg, rgba(164,59,211,0.739),linear-gradient(#f463ec));
   border:1px solid #cb00ff;
- 
+  border-radius:50px;
  
 }
 .header-btn:hover {
@@ -73,8 +78,9 @@ html{
   color:#e8f9fde6;
   
 }
+/*VIDEO*/
 video{
-width:100%;
+  width:100%;
 }
 .intro{
   position:absolute;
@@ -106,14 +112,14 @@ width:100%;
   }
   
 .slider{
-  background:rgb(191,213,218);
+  background:#2e2298ab;
   position:fixed;
   top:0;
   left:0;
   width:100%;
   height:100%;
   transform:translateY(100%);
-  z-index:9999;
+  z-index:999999;
   
 }
 
