--- a/responsive.css
+++ b/responsive.css
@@ -38,7 +38,7 @@
     left:0%;  
     width:100%;
     height:100vh;
-    background:#b75dde;
+    background:linear-gradient(3deg,#b75dde,#8373e9);
     flex-direction:column;
       align-content:center;
     -clip-path:circle(100px at 90% -20%);
@@ -48,7 +48,7 @@
   }
   
    .navbar-nav.open{
-       -clip-path:circle(1000px at 90% -20%);
+       -clip-path:circle(3000px at 90% -20%);
     -webkit-clip-path:circle(1000px at 90% -20%);
     pointer-events:all;
    }
@@ -98,9 +98,14 @@
  .header-btn{
    left:28%;
    top:35%;
-   background:linear-gradient(to bottom right,#00ccff00,#78317d);
+   background:#fff;
  }
- 
+ .header-btn a{
+   color:#69848b;
+ }
+ .header-btn a:hover{
+     color:#e8f9fde6;
+ }
 }
   
  
