--- a/responsive.css
+++ b/responsive.css
@@ -8,8 +8,8 @@
   
   }
  .header-btn{
-   left:auto;
-   top:auto;
+   left:41%;
+   top:90%;
    
  }
 
@@ -34,8 +34,8 @@
     font-size:5px;
   }
   .header-btn {
- left:auto;
-   top:auto;
+ left:41%;
+   top:80%;
  }
    
 }
